# AppNest

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  release.yml
app/: Cargo.toml  build.rs
app/public/: app.js  index.html  presets.json  style.css
app/src/: apimock.rs  main.rs  manager.rs  server.rs
docs/: CNAME  index.html  robots.txt  script.js  sitemap.xml  style.css
public/: app.js  index.html
src/: manager.rs  server.rs
