[package]
name = "appnest"
version = "1.0.22"
edition = "2021"
description = "Local app manager for developers — build, run, and monitor projects from a single dashboard"

[[bin]]
name = "appnest"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tray-icon = "0.14"
open = "5"
rust-embed = "8"
mime_guess = "2"
rfd = "0.14"
futures-util = "0.3"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3
lto = true
strip = true
