[package]
name = "appnest"
# Placeholder. The real version is stamped into Cargo.toml + Cargo.lock by
# .github/workflows/release.yml from the published Release's tag (e.g. v1.1.0
# becomes 1.1.0). Local dev builds report this 0.0.0-dev value; release
# binaries report whatever tag you publish.
version = "0.0.0-dev"
edition = "2021"
description = "Local app manager for developers — build, run, and monitor projects from a single dashboard"

[[bin]]
name = "appnest"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
open = "5"
rust-embed = "8"
mime_guess = "2"
rfd = "0.14"
futures-util = "0.3"
async-stream = "0.3"
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
tray-icon = "0.14"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
